deployments/gitops/deploymentconfig.apps.openshift.io_postgresql.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.alpha.openshift.io/wait-for-ready: "true"
  creationTimestamp: "2020-02-01T07:38:33Z"
  generation: 2
  labels:
    app: db
    template: postgresql-ephemeral-template
  name: postgresql
  namespace: voting-application
  resourceVersion: "51433"
  selfLink: /apis/apps.openshift.io/v1/namespaces/voting-application/deploymentconfigs/postgresql
  uid: d98ca9c2-44c5-11ea-bfc6-0242ac110037
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: postgresql
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: db
        name: postgresql
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: db
        - name: POSTGRESQL_DATABASE
          value: postgres
        - name: POSTGRESQL_PASSWORD
          value: postgres_password
        - name: POSTGRESQL_USER
          value: postgres_user
        image: docker-registry.default.svc:5000/openshift/postgresql@sha256:00adb16dd5f890e6b575ad073b5c272d0ff6ab5f862b09317bf4aed56dcee8d1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgresql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: postgresql-data
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - postgresql
      from:
        kind: ImageStreamTag
        name: postgresql:9.6
        namespace: openshift
      lastTriggeredImage: docker-registry.default.svc:5000/openshift/postgresql@sha256:00adb16dd5f890e6b575ad073b5c272d0ff6ab5f862b09317bf4aed56dcee8d1
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-02-01T07:39:06Z"
    lastUpdateTime: "2020-02-01T07:39:06Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2020-02-01T07:39:06Z"
    lastUpdateTime: "2020-02-01T07:39:06Z"
    message: replication controller "postgresql-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
