deployments/gitops/deploymentconfig.apps.openshift.io_vote.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2020-02-01T07:38:01Z"
  generation: 2
  labels:
    app: vote
  name: vote
  namespace: voting-application
  resourceVersion: "51410"
  selfLink: /apis/apps.openshift.io/v1/namespaces/voting-application/deploymentconfigs/vote
  uid: c664cbd5-44c5-11ea-bfc6-0242ac110037
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: vote
    deploymentconfig: vote
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: vote
        deploymentconfig: vote
    spec:
      containers:
      - env:
        - name: REDIS_PASSWORD
          value: redis_password
        image: docker-registry.default.svc:5000/voting-application/vote@sha256:d82bd21f053d5a459083e9ad7a768848848cfa85bb1b1db68dc999e4270b0070
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - vote
      from:
        kind: ImageStreamTag
        name: vote:latest
        namespace: voting-application
      lastTriggeredImage: docker-registry.default.svc:5000/voting-application/vote@sha256:d82bd21f053d5a459083e9ad7a768848848cfa85bb1b1db68dc999e4270b0070
    type: ImageChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-02-01T07:39:02Z"
    lastUpdateTime: "2020-02-01T07:39:02Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2020-02-01T07:38:55Z"
    lastUpdateTime: "2020-02-01T07:39:03Z"
    message: replication controller "vote-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
