deployments/gitops/route.route.openshift.io_vote.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-02-01T07:38:07Z"
  labels:
    app: vote
  name: vote
  namespace: voting-application
  resourceVersion: "51083"
  selfLink: /apis/route.openshift.io/v1/namespaces/voting-application/routes/vote
  uid: c9d1c281-44c5-11ea-bfc6-0242ac110037
spec:
  host: vote-voting-application.2886795319-80-cykoria05.environments.katacoda.com
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: vote
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2020-02-01T07:38:07Z"
      status: "True"
      type: Admitted
    host: vote-voting-application.2886795319-80-cykoria05.environments.katacoda.com
    routerName: router
    wildcardPolicy: None
