deployments/gitops/service_db.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp","template.openshift.io/expose-uri":"postgres://{.spec.clusterIP}:{.spec.ports[?(.name==\"postgresql\")].port}"},"labels":{"app":"db","template":"postgresql-ephemeral-template"},"name":"db","namespace":"voting-application","resourceVersion":"51191"},"spec":{"ports":[{"name":"postgresql","port":5432,"protocol":"TCP","targetPort":5432}],"selector":{"name":"postgresql"},"sessionAffinity [...]
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  creationTimestamp: "2020-02-01T07:41:13Z"
  labels:
    app: db
    template: postgresql-ephemeral-template
  name: db
  namespace: voting-application
  resourceVersion: "51800"
  selfLink: /api/v1/namespaces/voting-application/services/db
  uid: 389fafba-44c6-11ea-bfc6-0242ac110037
spec:
  clusterIP: 172.30.132.139
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
