deployments/gitops/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}
  creationTimestamp: "2020-02-01T07:38:09Z"
  labels:
    app: redis
    template: redis-ephemeral-template
  name: redis
  namespace: voting-application
  resourceVersion: "51092"
  selfLink: /api/v1/namespaces/voting-application/services/redis
  uid: cb4e7a6c-44c5-11ea-bfc6-0242ac110037
spec:
  clusterIP: 172.30.254.199
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    name: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
